WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99079
Regression(
r131058
): Broke EFL build
https://bugs.webkit.org/show_bug.cgi?id=99079
Summary
Regression(r131058): Broke EFL build
Chris Dumez
Reported
2012-10-11 08:46:53 PDT
r131058
broke the EFL build: /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp: In member function ‘bool WebCore::SimpleFontData::canRenderCombiningCharacterSequence(const UChar*, size_t) const’: /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:184:36: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:198:29: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:201:32: error: ‘WTF::HashTableIterator<WTF::String, WTF::KeyValuePair<WTF::String, bool>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, bool> >, WTF::StringHash, WTF::HashMapValueTraits<WTF::HashTraits<WTF::String>, WTF::HashTraits<bool> >, WTF::HashTraits<WTF::String> >::ValueType’ has no member named ‘second’ /home/chris/unencrypted/WebKit/Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp:202:1: warning: control reaches end of non-void function [-Wreturn-type] make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/platform/graphics/freetype/SimpleFontDataFreeType.cpp.o] Error 1
Attachments
Patch
(1.91 KB, patch)
2012-10-11 08:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-11 08:51:05 PDT
Created
attachment 168236
[details]
Patch Could someone please cq+?
WebKit Review Bot
Comment 2
2012-10-11 09:37:55 PDT
Comment on
attachment 168236
[details]
Patch Clearing flags on attachment: 168236 Committed
r131073
: <
http://trac.webkit.org/changeset/131073
>
WebKit Review Bot
Comment 3
2012-10-11 09:37:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug