Regression(r131058): Broke EFL build https://bugs.webkit.org/show_bug.cgi?id=99079

Unreviewed build fix.

Use iterator::value instead of iterator::second to fix
build break after r131058.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-11

* platform/graphics/freetype/SimpleFontDataFreeType.cpp:
(WebCore::SimpleFontData::canRenderCombiningCharacterSequence):

Canonical link: https://commits.webkit.org/117043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131073 268f45cc-cd09-0410-ab3c-d52691b4dbfc