Source/WebCore/platform/graphics/freetype/SimpleFontDataFreeType.cpp
@@ -181,7 +181,7 @@ bool SimpleFontData::canRenderCombiningCharacterSequence(const UChar* characters
 
     WTF::HashMap<String, bool>::AddResult addResult = m_combiningCharacterSequenceSupport->add(String(characters, length), false);
     if (!addResult.isNewEntry)
-        return addResult.iterator->second;
+        return addResult.iterator->value;
 
     UErrorCode error = U_ZERO_ERROR;
     Vector<UChar, 4> normalizedCharacters(length);
@@ -195,10 +195,10 @@ bool SimpleFontData::canRenderCombiningCharacterSequence(const UChar* characters
         return false;
 
     if (FcFreeTypeCharIndex(face, normalizedCharacters[0]))
-        addResult.iterator->second = true;
+        addResult.iterator->value = true;
 
     cairo_ft_scaled_font_unlock_face(m_platformData.scaledFont());
-    return addResult.iterator->second;
+    return addResult.iterator->value;
 }
 #endif
 
